refactor pet
