# services/controllers/PetController.ts
@@ -1,97 +1,139 @@
 import Handler from '../interfaces/infra/Handler'
-import { InternalServerError, StatusOk } from './../../utils/responses/index';
+import { PetService } from './../services/PetService';
+import { InternalServerError } from './../../utils/responses/index';
 import { PetRepository } from './../repositories/PetRepository';
 import { Pet } from './../interfaces/types';
-import { NoContent, BadRequest } from '../../utils/responses'
+import { BadRequest } from '../../utils/responses'
 import { APIGatewayEvent, APIGatewayProxyResult } from 'aws-lambda';
 import { getUser } from './AuthController';
+import { NewPet } from '../interfaces/step';
 
-export const GetAllPets: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
+async function getSvc(req: APIGatewayEvent): Promise<{ svc: PetService; err: APIGatewayProxyResult; }> {
     const user = await getUser(req.headers)
     if (!user.active) {
-        return BadRequest("Usuário nao encontrado.")
+        return {
+            svc: null,
+            err: BadRequest("Usuário nao encontrado.")
+        }
     }
-
     const petRepository = new PetRepository()
-    const pets = await petRepository.getAllByUserID(user.user_id)
-    if (pets.length == 0) {
-        return BadRequest("Nenhum pet encontrado.")
+    return {
+        svc: new PetService(user, petRepository),
+        err: null,
     }
+}
 
-    const viewmodel = petRepository.parseAll(pets)
-    return StatusOk(viewmodel)
+export const GetAllPets: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
+    try {
+        const { svc, err } = await getSvc(req)
+        if (err !== null) {
+            return err
+        }
+
+        return await svc.getAllByUserID()
+    } catch (err) {
+        console.log(JSON.stringify(err))
+        return InternalServerError()
+    }
 }
 
 export const CreatePet: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
-    const pet = JSON.parse(req.body) as Pet
-    const petRepository = new PetRepository()
+    try {
+        const { svc, err } = await getSvc(req)
+        if (err !== null) {
+            return err
+        }
 
-    const user = await getUser(req.headers)
+        let body = JSON.parse(req.body)
+        let payload: NewPet = {
+            fullName: body.fullName,
+            birthDate: body.birthDate,
+            size: body.size,
+            weight: body.weight,
+            description: body.description,
+            specieID: body.specieID,
+            raceID: body.raceID,
+        };
 
-    pet.userUUID = user.user_uuid
-    if (!pet.userUUID) {
-        return BadRequest("Usuário nao encontrado.")
+        for (const key of Object.keys(payload)) {
+            if (!payload[key]) {
+                return BadRequest(`O campo ${key} é obrigatório.`)
+            }
+        }
+
+        return await svc.createPet(payload)
+    } catch (err) {
+        console.log(JSON.parse(err))
+        return InternalServerError()
     }
-
-    const pet_id = await petRepository.insert(pet)
-    if (!pet_id) {
-        return BadRequest("couldn't insert pet")
-    }
-
-    return NoContent()
 }
 
 export const GetPet: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
-    const { uuid } = req.pathParameters
-    if (!uuid) {
-        return BadRequest("Campo de id nao pode ser vazio")
-    }
-
-    const petRepository = new PetRepository()
-
-    const pet = await petRepository.getByUUID(uuid)
-    if (!pet.uuid) {
-        return BadRequest("Pet nao encontrado.")
-    }
-
-    const viewmodel = petRepository.parse(pet)
-    return StatusOk(viewmodel)
-}
-
-export const UpdatePet: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
     try {
+        const { svc, err } = await getSvc(req)
+        if (err !== null) {
+            return err
+        }
+
         const { uuid } = req.pathParameters
         if (!uuid) {
             return BadRequest("Campo de id nao pode ser vazio")
         }
 
-        const petRepository = new PetRepository()
-        const newPet = JSON.parse(req.body) as Pet
-        for (const [key, value] of Object.keys(newPet)) {
-            await petRepository.update(newPet, key, value)
+        return await svc.getPet(uuid)
+    } catch (err) {
+        console.log(JSON.parse(err))
+        return InternalServerError()
+    }
+}
+
+export const UpdatePet: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
+    try {
+        const { svc, err } = await getSvc(req)
+        if (err !== null) {
+            return err
         }
 
-        return NoContent()
+        const { uuid } = req.pathParameters
+        if (!uuid) {
+            return BadRequest("Campo de id nao pode ser vazio")
+        }
+
+        let body = JSON.parse(req.body)
+        let pet: Pet = {
+            uuid,
+            fullName: body.fullName,
+            birthDate: body.birthDate,
+            size: body.size,
+            weight: body.weight,
+            description: body.description,
+            specieID: body.specieID,
+            raceID: body.raceID,
+            userID: 0
+        };
+
+        return await svc.updatePet(pet)
     } catch (err) {
-        return InternalServerError("Não foi possível atualizar o pet escolhido no momento. Tente novamente mais tarde")
+        console.log(JSON.parse(err))
+        return InternalServerError()
     }
 }
 
 export const DeletePet: Handler = async (req: APIGatewayEvent): Promise<APIGatewayProxyResult> => {
     try {
+        const { svc, err } = await getSvc(req)
+        if (err !== null) {
+            return err
+        }
+
         const { uuid } = req.pathParameters
         if (!uuid) {
             return BadRequest("Campo de id nao pode ser vazio")
         }
 
-        const petRepository = new PetRepository()
-        const ok = await petRepository.remove(uuid)
-        if (!ok) {
-            throw new Error(`Failed to remove pet`)
-        }
-
-        return NoContent()
+        return await svc.deletePet(uuid)
     } catch (err) {
-        return InternalServerError("Não foi possível atualizar o pet escolhido no momento. Tente novamente mais tarde")
+        console.log(JSON.parse(err))
+        return InternalServerError()
     }
 }
